--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     </div>
     {% for menu in boxes.menus.all %}
       <div class="row">
-        <a href="{{ menu.url">{{ menu.name }}</a>
+        <a href="{{ menu.url }}">{{ menu.name }}</a>
       </div>
     {% endfor %}
   </div>
