--- a/templates/base.html
+++ b/templates/base.html
@@ -27,17 +27,29 @@
 
 </head>
 <body>
+  <div class="container">
+    <header>
+      <nav>
+      {% for item in navs.main %}
+        <a href="{{ item.url }}">{{ item.name }}</a>
+      {% endfor %}
+      {% if navs.main|length == 0 %}
+        <em>Add nav items in the Pages/Nav sections of the admin to get started</em>
+      {% endif %}
+      </nav>
+    </header>
+    {% block content %}
+    {% endblock %}
+</div>
 
-  <header>
-  <nav>
-  {% for item in navs.main %}
-    <a href="{{ item.url }}">{{ item.name }}</a>
-  {% endfor %}
-  </nav>
-  </header>
-
-  {% block content %}
-  {% endblock %}
+<nav class="footer">
+    {% for item in navs.footer %}
+      <a href="{{ item.url }}">{{ item.name }}</a>
+    {% endfor %}
+    {% if navs.footer|length == 0 %}
+      <em>Add nav items in the Pages/Nav sections of the admin to see your footer nav</em>
+    {% endif %}
+</nav>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
