--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div class="container">
+<h2 class="center">Hello, Chef!</h2>
     <div class="row">
       <div class="one-half column">
        <h4>{{ account.restaurant_name }}</h4>
