--- a/templates/about.html
+++ b/templates/about.html
@@ -38,7 +38,7 @@
     <input id="last_name" type="text" required name="last_name" />
     
     <label for="email">Your email</label>
-    <input id="email" type="email" required name="Email" />
+    <input id="email" type="email" required name="email" />
 
   <div class="row">
   <input class="button-primary" type="submit" value="Send">
