--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <!-- Powered by BentoBox -->
+  <!-- Powered by BentoBox -->
+  <!-- Powered by BentoBox -->
+  
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
