--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
     <header>
       <nav>
       {% for item in navs.main %}
+      {{item}}
         <a href="{{ item.url }}">{{ item.name }}</a>
       {% endfor %}
       {% if navs.main|length == 0 %}
