header/footer structure

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,8 @@
 <!-- START footer.html  -->
+
+<!-- .container close -->
+</div>
+
 <nav class="footer">
     {% for item in navs.footer %}
       <a href="{{ item.url }}">{{ item.name }}</a>
