--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,18 +1,75 @@
 <!-- START footer.html  -->
 
 <!-- .container close -->
-
-
-<nav class="footer">
-    {% for item in navs.footer %}
-      <a href="{{ item.url }}">{{ item.name }}</a>
-    {% endfor %}
-    {% if navs.footer|length == 0 %}
-      <em>Add nav items in the Pages/Nav sections of the admin to see your footer nav</em>
-    {% endif %}
-</nav>
+<footer id="newsletter-capture" class="site-footer">
+  <div class="content-margins">
+    <h2 class="newsletter-capture-title">
+      Stay connected.
+    </h2>
+    <form class="newsletter-capture-form">
+      <label>
+        <span class="screen-reader-text">Your email: </span>
+        <input type="email" class="red-input" placeholder="¡Your Email!">
+      </label>
+      <button class="outline-button" type="submit">
+        Submit
+      </button>
+    </form>
+  </div>
+</footer><!-- #newsletter-capture -->
+<footer id="logo-carousel" class="site-footer">
+  <div class="content-margins">
+    <ul class="partner-carousel">
+      {% for n in range(12) %}
+      <li class="partner-slide">
+        <!--<img src="" alt="">-->
+        <svg>
+          <use xlink:href="{{ static('img/symbols.svg#MLS_horizontal')}}"></use>
+        </svg>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+</footer>
+<footer id="colophon" class="site-footer">
+    <div class="content-margins">
+      <div class="site-branding" id="footer-branding">
+        <a href="{{ account.site.url }}" id="colophon-logo">
+          <svg>
+            <use xlink:href="{{ static('img/symbols.svg#MLS_horizontal')}}"></use>
+          </svg>
+        </a>
+      </div><!-- #footer-branding -->
+      <address class="site-info">
+        10 Hudson Yards New York, NY  10001
+        <br>
+        <a href="mailto:hola@littlespain.com">hola@littlespain.com</a>
+        <br>
+        222.222.2222
+      </address><!-- .site-info --> 
+      <nav id="footer-navigation" class="menu">
+      <ul class="footer-menu">
+        {% for item in navs.footer %}
+          <li class="nav-item">
+              <a href="{{ item.url }}">{{ item.name }}</a>
+          </li>
+        {% endfor %}
+        {% if navs.footer|length == 0 %}
+          <li>
+            <em>Add nav items in the Pages/Nav sections of the admin to see your footer nav</em>
+          </li>
+        {% endif %}
+      </ul>
+    </nav><!-- .footer-navigation -->
+    <div id="tramp-stamp">
+      Site made in collaboration with <a href="https://www.wearecmyk.com/" target="_blank">CMYK</a>.
+    </div>
+    </div><!-- .content-margins -->
+  </footer><!-- #colophon -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+<script src="{{ static('js/scripts.js') }}"></script>
 </body>
 </html>
 
