--- a/templates/el_blog.html
+++ b/templates/el_blog.html
@@ -5,6 +5,9 @@
 el_blog.html
 
 <!-- {{current}} -->
-{{boxes.blog}}
+<!-- {{boxes.blog.all}} -->
+{% for post in boxes.blog.all %}
+<a href="{{post.url}}">link</a>
+{% endfor %}
 
 {% include "footer.html" %}
