--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,8 @@
-{% extends "base.html" %}
+{% include "header.html" %}
+
+index.html
+<!-- {{current}} -->
+{{pages.all}}
+
+
+{% include "footer.html" %}
