--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -91,7 +91,7 @@
     @extend %input;
     height: 16px;
     width: 12px;
-    background: url('../img/carousel-arrow.svg');
+    // background: url('../img/carousel-arrow.svg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
@@ -148,7 +148,7 @@
 }
 
 #footer-branding {
-  
+
 }
 
 #colophon-logo {
@@ -190,7 +190,7 @@ address.site-info {
 #footer-navigation {
   flex: 0 0 columns(3,1);
   ul {
-    
+
     li {
       a {
         @include nav-font-style;
