--- a/templates/header.html
+++ b/templates/header.html
@@ -32,7 +32,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!-- <link rel="stylesheet" href="{{ static('css/normalize.css') }}">
   <link rel="stylesheet" href="{{ static('css/skeleton.css') }}"> -->
-  <link rel="stylesheet" href="{{ static('css/style.css') }}">
+  <link rel="stylesheet" href="{{ static('dist/style.css') }}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
 
   <!-- Favicon
